# ChangeLog for media-radio/flrig
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-radio/flrig/ChangeLog,v 1.32 2014/01/05 10:46:52 ago Exp $

  05 Jan 2014; Agostino Sarubbo <ago@gentoo.org> flrig-1.3.14.ebuild:
  Stable for x86, wrt bug #495788

  04 Jan 2014; Chema Alonso <nimiux@gentoo.org> flrig-1.3.14.ebuild:
  Stable for amd64 wrt bug #495788

*flrig-1.3.14 (17 Oct 2013)

  17 Oct 2013; Thomas Beierlein <tomjbe@gentoo.org> +flrig-1.3.14.ebuild:
  Version bump

*flrig-1.3.13 (03 Sep 2013)

  03 Sep 2013; Thomas Beierlein <tomjbe@gentoo.org> +flrig-1.3.13.ebuild,
  +files/vfprintf_bug.diff:
  Version bump

  15 Jul 2013; Thomas Beierlein <tomjbe@gentoo.org> -flrig-1.3.10.ebuild,
  -flrig-1.3.11.ebuild:
  Drop old

  30 Jun 2013; Agostino Sarubbo <ago@gentoo.org> flrig-1.3.12.ebuild:
  Stable for x86, wrt bug #475208

  30 Jun 2013; Agostino Sarubbo <ago@gentoo.org> flrig-1.3.12.ebuild:
  Stable for amd64, wrt bug #475208

*flrig-1.3.12 (25 May 2013)

  25 May 2013; Thomas Beierlein <tomjbe@gentoo.org> +flrig-1.3.12.ebuild:
  Version bump

  13 Mar 2013; Thomas Beierlein <tomjbe@gentoo.org> -flrig-1.3.08.ebuild,
  -flrig-1.3.09.ebuild:
  Remove old

  12 Mar 2013; Agostino Sarubbo <ago@gentoo.org> flrig-1.3.11.ebuild:
  Stable for x86, wrt bug #461188

  12 Mar 2013; Agostino Sarubbo <ago@gentoo.org> flrig-1.3.11.ebuild:
  Stable for amd64, wrt bug #461188

  08 Feb 2013; Agostino Sarubbo <ago@gentoo.org> flrig-1.3.10.ebuild:
  Stable for x86, wrt bug #456030

  08 Feb 2013; Agostino Sarubbo <ago@gentoo.org> flrig-1.3.10.ebuild:
  Stable for amd64, wrt bug #456030

*flrig-1.3.11 (30 Jan 2013)

  30 Jan 2013; Thomas Beierlein <tomjbe@gentoo.org> +flrig-1.3.11.ebuild:
  Minor maintainance release

*flrig-1.3.10 (20 Dec 2012)

  20 Dec 2012; Thomas Beierlein <tomjbe@gentoo.org> +flrig-1.3.10.ebuild:
  Version bump

  14 Dec 2012; Thomas Beierlein <tomjbe@gentoo.org> flrig-1.3.08.ebuild,