@@ -5,25 +5,17 @@ AUX vfprintf_bug.diff 3016 SHA256 0f3cc1735cb467364b243492866960c156e9c5c1282492
 DIST flrig-1.3.12.tar.gz 571812 SHA256 8a7c0f1d0dcc34e0c925334cdf23cc23b7be902d269e2ea0679d3191412cfbed SHA512 77d096b5890de14a23b2453bba82d4a055d065fd4a6a4c0c4244b7bff44fa9dac3429e06cb69a67a31ec2b5ed6563b4b925f2758bf450f462749cb77be1a131d WHIRLPOOL e9445e66435e8bde748aff28830c3e2f56fd780c43032ebeaf0dff2f06a260728663883a2622f263ae5b808bc893483adee932a5ea4758d883117a4f97b24651
 DIST flrig-1.3.13.tar.gz 578415 SHA256 c5238bc72dc04a2b2ba741e093672990ec9ceecc7bfc4137b76d9e01a89dfdbb SHA512 be2460237745cb35687a3a982ad3f286ffeae437d3189848e648e2d4b144faa8e5dadef0a7c89787be5f380e31ac68c773955cf00487b185010d71c8d9f14c28 WHIRLPOOL 68e7686c71368adbec11b55de490c8d28b80ebd5b49f81992c0d2aeb463945809665cd47b329750294649ec055cd7adcdb5a9f2383bfa5ac625516cc1652b66f
 DIST flrig-1.3.14.tar.gz 578452 SHA256 d4f5d5028800de2caf678621ab3a0c917197a0365220a21a1a54610033001a3c SHA512 0b4dfc4c7f9a410114ee31937306610408fd8e75ebd6674c2cbe60c4a78b6397f034a44da0087ccec7c0e27445ac17fe54385c8a3e84e20cb7155ed28827fdb1 WHIRLPOOL dfda9a885f97dd47121a5586074185d69fb2ec98ecadeb6edb5094a92ef023192c945c87cfceaf414d06ca165b46af8d0b0a0865dfe788b2fb7195f0b4a8db62
+DIST flrig-1.3.15.tar.gz 596888 SHA256 1c6163b3b1a410829a2ac4bd68f857d7c25419041bd30eb003bd0aff22348818 SHA512 a503ac3fcca72cc2dc587b4b1bf3c2d7a4a6c82cacbd85729e17dc42227fb9d5ead653a9303b0ec4c4749de1a0e3695763f04c296dd52cddc633648e7ca44039 WHIRLPOOL c9517781bfb75cf4dd44711fb2dff8691f7a9d775a61ebaefc3df2c980ee474838ed1010982c9591fcbb1e2cd8eed62029fd51a8c2c007e24d8e2a33891e7d1d
 EBUILD flrig-1.3.12.ebuild 654 SHA256 8a39b0910c8779f55b01bc7406c6da27703b56b126d25a8f6b332cc533d140c3 SHA512 626963fab17ba89b4d438087f8da883a7f5c4f36520825227a69bae0a57d218af3581a98f2f7ab10eae31f1c805c024e8d2a5213df7f46c32a7788b60e35a22f WHIRLPOOL ac3951b9aebb84ddae4d3b27bfb0c52fda049c68ca73a14e2bf3ab99d79b13bc46bfccca289da2827389e846fcd25034673ade2a59e2ffea8990156249939323
 EBUILD flrig-1.3.13.ebuild 734 SHA256 d34a0c6147a173e616f607e8d0e540e18e6c5e18ef6d229819979c6564f6992f SHA512 009b326d10119e56f856c0bf22c26414c7ad6bc8ffd927bc938a4055bfe32d7128a193f161216087bda86f77de5015742823bc0de02d29dfc45fd6b2a78bc2d1 WHIRLPOOL 3257d1506a84db93fbb80afd68341c2a4e3a556e351721e10ab215c878f25f78ad1508c16b7056892ce16f08e3be2417f21844e7e7c820906e386470ee4b40af
 EBUILD flrig-1.3.14.ebuild 654 SHA256 e4ff5ace022d1e1ff792d5bc4b8234306e6c84d46acf1b93a7153c0a18fab3fb SHA512 81a915c4802a8b949fd55637706f02b010b8f6cf9fd18eab8466ea52248e76d7ce61268c6331826fe7627c222b1da2757128027eca494fc9c9987fb3398c0bc0 WHIRLPOOL 2288a5fd1b4445baf0c2282637bd4d1247096c3360dcf757fb986f144940e4c8e973b5257d83b4ad2557917052602e1f6b45a83eecaaa4998e0ae03c3e890635
-MISC ChangeLog 4124 SHA256 c397da249e0db34b2012422b2ff90d80db6ed454c3238ed85372d80071ce2681 SHA512 ba5de58695ad7f0baeb4bfe6932c5e869095903151c754a1b29fa61b40991c944406948c1c84c4284e35e233f755b430ad1959aab248eae694d1f5b7a1a25fbf WHIRLPOOL ef6af188f05154895144971a573882095170ea7f8245618616c380e72e45bf5e2c70add9ba9d7bf457de342950d4d331b52835afc511505de2b59ef43d097586
+EBUILD flrig-1.3.15.ebuild 659 SHA256 3ca28b630d31f33bc52d1a09eb3ebf00c0e733c7ae85b8a1d68fee5bab1baf7d SHA512 cc3bbdecca0895f848a2ca03ea6b045d643cec8e116bd0d2c38a41c9398f3419eaf8cf1b7edebada7ed6e190411670376e17351ecbe9f4579b8267ba92c3f4b5 WHIRLPOOL f0f79b0d5f4d6a87cddb40786303fc026ff47fabbb1ae5c00cdbf4b20f9bc77cec7799e6f8ecba41eecd41cd8874707c2a3518cad2bd7af18fbbb2ff3644aa95
+MISC ChangeLog 4246 SHA256 f82fac53329d5572a4ca52b3bc08d5a5b64fe7ffba3b5519c1da45cf6481b27e SHA512 109d9f7713143473ccc837195c93ceeec1e93acdbd3df84b8c02008a01d62dcca63d5b563bef7cf62ce06e41cc390a8efb296a3a1e060e57724057f3bec711f0 WHIRLPOOL 0dced0daef7929c24b1f2ef31fdc8095de3c0b4c81f213aa89978a30abb025b85636ebd43548b55a57551a6be74b4014ec2105350ef46853eec9a54b16459869
 MISC metadata.xml 236 SHA256 c19d776cfd72a8a5833ea6d4c6a59f906f624aa5fd758527c2171d806a9f9096 SHA512 f95348dda4493774aa5123c211b9f7d2b2f8a7d18feea8e31d5b72e73afcc6617a5f4a7648698b0e3726f31ddaddec9545239d27f39c13a149906033c06827b1 WHIRLPOOL ad9eb3edb0f6cf0d91c23ac3d18489aa427468c6bb577f4bf3ce7be1ee87379ad154cbb8f370637f8105bfc02380de2063b6b4d0a5a61e1f5c9b2faf7303b0d6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJSyTgdAAoJELp701BxlEWfiZUQALLc80AmGw/+F+wA6E8+JR0s
-qaJoao5pNDOUCTzefFFcP7OVXpapczyRvJuu6s3PKL3e3if1uJ6Pl6n7QAsKRgup
-VM0P5D4mlUV6ANtDah29b4XkWC+Vuc1iiQrN7H4jCj+VrU1chRKpzsiCysJh1YcU
-iMUuZPXEPxHuJef/4uWH+mpxk7KjkaKCSkb8Dgelosye4e7uWqSm7Wk9Yhkxr7NA
-vsp4vOzBgFe1UqoaHX6dEoqh8o5y4VuD4xUO20uq9l1T2mO+0jDg5WiR8grUIAgV
-/W1NnKhvy9+0/PIxZ/qBweAnSgPu7U5HxbwEwwlDGiTovJNwOfvEYNY6BL9m6Xok
-ksh4GN9MAB4J5pIOtw72UynDcfvNgNVQWAI32PV8RqS2iar+c6OXMS533ePcqHIW
-7hHGYQXC8SaYy0u2v8ml9nUxLquUlXWNUeKUCIxUsK6RPaba5wb1PXfhlFK8e0YQ
-RkBeoDzaEz1BKt02AVK+NcLPhOhzW58yq5hM6D/nsfrcvrvEMDdvioy8JenmcGI6
-XPy7eo+hfQg5TFoTuJ0z9h9vLR6Mo5mWRFJYl4Y+5vKzPveb9lugr6g6t5P1T2Ob
-y8GRm7UguscrSNy84HixP7NfGs6ccHJeYjpS1oEfq/6Z3uMZqtAeFUL+2JPUjDnc
-pjZcZGyTddKJ/0AJRcAT
-=vHIX
+iEYEAREIAAYFAlLzyNEACgkQQe4uqXYgU9Xy2wCgwUfvofpMwFBg4ZKCPT3QfrSc
+MA8AoJlzs6XVF5Zp9iIlJQY9zEZmUsc+
+=eEfb
 -----END PGP SIGNATURE-----
