@@ -1,0 +1,12 @@
+DEFINED_PHASES=install
+DEPEND=x11-libs/libX11 x11-libs/fltk:1 x11-misc/xdg-utils sys-devel/gettext
+DESCRIPTION=Transceiver control program for Amateur Radio use
+EAPI=5
+HOMEPAGE=http://www.w1hkj.com/flrig-help/index.html
+IUSE=nls
+KEYWORDS=~amd64 ~x86
+LICENSE=GPL-2
+RDEPEND=x11-libs/libX11 x11-libs/fltk:1 x11-misc/xdg-utils
+SLOT=0
+SRC_URI=http://www.w1hkj.com/downloads/flrig/flrig-1.3.15.tar.gz
+_md5_=7d61f46363ad4eec86a9f433e9717c7d
