@@ -1,6 +1,11 @@
 # ChangeLog for media-radio/flrig
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-radio/flrig/ChangeLog,v 1.32 2014/01/05 10:46:52 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-radio/flrig/ChangeLog,v 1.33 2014/02/06 17:39:20 tomjbe Exp $
+
+*flrig-1.3.15 (06 Feb 2014)
+
+  06 Feb 2014; Thomas Beierlein <tomjbe@gentoo.org> +flrig-1.3.15.ebuild:
+  Version bump
 
   05 Jan 2014; Agostino Sarubbo <ago@gentoo.org> flrig-1.3.14.ebuild:
   Stable for x86, wrt bug #495788
